Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

  Zope 2.10.1 (unreleased)

    Bugs fixed

      - Collector #2213: Can't edit "old" ZopePageTemplate instances.

      - Collector #2208: rewriting/setting the 'charset' part of the
        content-type HTTP header will be done only for 'text/*'

      - Collector #2209: ZTUtils module could not be used inside ZPT

      - Collector #2206: Set PYTHONPATH to include existing PYTHONPATH
        in skel/bin/zopectl.in and skel/bin/runzope.in


  Zope 2.10.0 (2006/10/04)

    Bugs fixed

  
  Zope 2.10.0 RC 1 (2006/09/25)

    Bugs fixed

      - Call setDefaultSkin on new requests created as the result of
        ConflictError retries.

      - Collector #2187: PUT_factory broken
      
  Zope 2.10.0 beta 2 (2006/09/17)

    Bugs fixed

      - Collector #2117: Don't choke in 'unrestrictedTraverse' for '+'
        path elements.

      - Collector #2185: Log username for FCGI requests.

      - Collector #2152: Fixed MailHost documentation; simple_send does not
        process or validate its arguments in any way.

      - Collector #2175: ZTUtils.make_hidden_input did not escape
        double-quotes.

      - Collector #2176: Fixed bad logging call.

      - Collector #1907: Moved 'alt' property from File to Image.

      - Collector #1983: Specifying session-resolution-seconds >= 1200 caused
        Zope startup to fail.

      - Collector #2169: webdav.Resource.COPY did not send ObjectClonedEvent.

      - Collector #2178: Fix ZopeTestCase doctest support for layers

  Zope 2.10.0 beta 2 (2006/08/20)

    Bugs Fixed

      - Collector #2155: Fix wrong parameter being passed to
        logger's error() method, with tests.

      - Updated Five to stable 1.5 release.

      - Traversal order changes were causing WebDAV requests which used
        acquisition to fail.
